2009-01-20  Hans Breuer  <hans@breuer.org>

	* app/load_save.c doc/diagram.dtd : load, save and document 
	<layer active="true"/>, fixes bug #568497

2009-01-18  Hans Breuer  <hans@breuer.org>

	* app/app_procs.[ch] : implement command line switches -I and -O to give
	input and output directories independent of filenames, bug #438842
	* plug-ins/postscript/diapsrenderer.c : don't unref the postscript renderer 
	font twice, fixing a crash spotted while testing the above

	* lib/dia_image.c : oops, commited before compiling - now it uses for
	message_warning() for invalid pathes _and_ includes "message"

	* app/load_save.c(read_connections) : while playing with "All Objects"
	I've got "connection point %d does not exists", now I get the more
	useful "connection point 14 does not exist on 'SISSI - area'"
	Also there was some flaw with the wants_update calculation.

	* makefile.msc lib/libdia.def : build the unit test on win32, too.

	* lib/diagramdata.c lib/layer.c : split the latter from the former to
	have more manageable pieces (one class per file)
	* lib/Makefile.am lib/makefile.msc po/POTFILES.in : updated accordingly

	* objects/custom/shape_info.c(load_shape_info) : default-(width|height)
	was still in points. Now it is cm fixing bug #568099

	[xmllint --dtdvalid doc/shape.dtd shapes/**/*.shape >/dev/null]
	* shapes/Contact/c_ifnot.shape shapes/RDP/t_transition.shape
	  shapes/RDP/transition.shape shapes/SDL/comment.shape 
	  shapes/SDL/function.shape shapes/SDL/macro.shape 
	  shapes/SDL/return.shape shapes/SDL/stop.shape : removed superfluous
	'svg:' prefix on style attribute
	* shapes/RDP/place_marquee.shape : removed attribute 'color' from 
	svg:circle element; it would be ambiguous and did not validate.
	Both foreground and background color are set in the style attribute.
	* docs/shape.dtd : changed circle attribute cy to be IMPLIED only
	Together this reduces the complaints of xmllint down to zero. Given
	the recent updates on 